syntax = "proto3";

package go.micro.service.product;
option go_package = "proto/product;go_micro_service_product";

service ProductService {
    rpc SearchByID (SearchByIDReq) returns (SearchResp) {}                 // 商品按ID搜索

	rpc SearchByMethod (SearchByMethodReq) returns (SearchResp) {}        // 商品按某方法搜索
	rpc SortByNameAndMethod (SortByNameAndMethodReq) returns (SortResp) {} // 商品按名称和排序方法排序

	rpc AddProduct (AddProductReq) returns (Resp) {}                // 增加商品
	rpc UpdateProduct (UpdateProductReq) returns (Resp) {}          // 修改商品
	rpc DelProduct (DelProductReq) returns (Resp) {}                // 删除商品
}

message Product {
	int32 id = 1;               // 商品ID
    string name = 2;            // 商品名称
    string classify = 3;        // 商品分类(大类)
    string tag = 4;             // 商品标签(小标签)
    string price = 5;           // 商品价格(按分计算)
    int32 salesVolume  = 6;     // 商品销量
    int32 commentsNum = 7;      // 商品评论数
    int32 inventory = 8;        // 商品库存(整数，件)
    string describe = 9;        // 商品简介
}

// 服务端响应
message SearchResp {
    int32 code = 1;
    string msg = 2;
    repeated Product products = 3;
}

message SortResp {
    int32 code = 1;
    string msg = 2;
    repeated Product products = 3;
}

message Resp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

message SearchByIDReq {
    int32 id = 1;
}

message SearchByMethodReq {
    string method = 1;
    string searchText = 2;
}

message SortByNameAndMethodReq {
    string name = 1;
    string method = 2;
}

message AddProductReq {
	Product product = 1;
}

message UpdateProductReq {
	Product product = 1;
}

message DelProductReq {
	int32 id = 1;
}