syntax = "proto3";

package go.micro.service.user;
option go_package = "proto/user;go_micro_service_user";

// 用户服务
service UserService {
	rpc Register (RegisterReq) returns (Resp) {}
	rpc Login (LoginReq) returns (Resp) {}
	rpc Logout (LogoutReq) returns (Resp) {}
	rpc GetLevel (GetLevelReq) returns (Resp) {}
}

// 用户结构体
message User {
    int32 id = 1;
    string name = 2;
    string phone = 3;
    string password = 4;
    int32 points = 5;   // 用户积分
    int32 level = 6;    // 用户等级
}

// 服务端响应
message Resp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

// 用户注册请求
message RegisterReq {
	User user = 1;
}

// 用户登录请求
message LoginReq {
	string phone = 1;
	string password = 2;
}

// 用户登出请求
message LogoutReq {
	int32 id = 1;
}

// 用户获取等级请求
message GetLevelReq {
	int32 id = 1;
}
